src/grammar/nmodlParser.ts
// Generated from nmodl.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import nmodlListener from "./nmodlListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class nmodlParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly T__55 = 56;
	public static readonly T__56 = 57;
	public static readonly T__57 = 58;
	public static readonly TIMES = 59;
	public static readonly DIVIDE = 60;
	public static readonly PLUS = 61;
	public static readonly MINUS = 62;
	public static readonly POWER = 63;
	public static readonly LPAREN = 64;
	public static readonly RPAREN = 65;
	public static readonly LBRACE = 66;
	public static readonly RBRACE = 67;
	public static readonly LBRACKET = 68;
	public static readonly RBRACKET = 69;
	public static readonly COMMA = 70;
	public static readonly APOSTROPHE = 71;
	public static readonly EQUALS = 72;
	public static readonly NOT_EQUALS = 73;
	public static readonly DOT = 74;
	public static readonly LESS = 75;
	public static readonly GREATER = 76;
	public static readonly COLON = 77;
	public static readonly ID = 78;
	public static readonly SIGN = 79;
	public static readonly NUMBER = 80;
	public static readonly INT = 81;
	public static readonly FLOAT = 82;
	public static readonly STRING = 83;
	public static readonly TITLE = 84;
	public static readonly IF = 85;
	public static readonly ELSE = 86;
	public static readonly ELSEIF = 87;
	public static readonly WHILE = 88;
	public static readonly BUILTIN_FUNC = 89;
	public static readonly USER_FUNC = 90;
	public static readonly WS = 91;
	public static readonly LINE_COMMENT = 92;
	public static readonly COMMENT_BLOCK = 93;
	public static readonly VERBATIM_BLOCK = 94;
	public static readonly PRINTF = 95;
	public static readonly NEWLINE = 96;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_file_ = 0;
	public static readonly RULE_nmodl_block = 1;
	public static readonly RULE_statement = 2;
	public static readonly RULE_nrn_stat = 3;
	public static readonly RULE_block = 4;
	public static readonly RULE_expression = 5;
	public static readonly RULE_builtin = 6;
	public static readonly RULE_assignment = 7;
	public static readonly RULE_logical_con = 8;
	public static readonly RULE_relational = 9;
	public static readonly RULE_addition = 10;
	public static readonly RULE_multiplication = 11;
	public static readonly RULE_exponentiation = 12;
	public static readonly RULE_negation = 13;
	public static readonly RULE_primary = 14;
	public static readonly RULE_plus_or_minus = 15;
	public static readonly RULE_mul_or_div = 16;
	public static readonly RULE_exp = 17;
	public static readonly RULE_rel_op = 18;
	public static readonly RULE_log_con = 19;
	public static readonly RULE_paren = 20;
	public static readonly RULE_var = 21;
	public static readonly RULE_var_ref = 22;
	public static readonly RULE_num = 23;
	public static readonly RULE_signed_num = 24;
	public static readonly RULE_local = 25;
	public static readonly RULE_local_vars = 26;
	public static readonly RULE_func = 27;
	public static readonly RULE_callable = 28;
	public static readonly RULE_func_call = 29;
	public static readonly RULE_func_par = 30;
	public static readonly RULE_func_def = 31;
	public static readonly RULE_function_table = 32;
	public static readonly RULE_table_par = 33;
	public static readonly RULE_neuron_block = 34;
	public static readonly RULE_units_block = 35;
	public static readonly RULE_parameter_block = 36;
	public static readonly RULE_assigned_block = 37;
	public static readonly RULE_state_block = 38;
	public static readonly RULE_unit_def = 39;
	public static readonly RULE_unit_name = 40;
	public static readonly RULE_unit_id = 41;
	public static readonly RULE_base_unit = 42;
	public static readonly RULE_par_def = 43;
	public static readonly RULE_assigned_def = 44;
	public static readonly RULE_state_var = 45;
	public static readonly RULE_kinetic = 46;
	public static readonly RULE_kinetic_stat = 47;
	public static readonly RULE_reaction = 48;
	public static readonly RULE_flux = 49;
	public static readonly RULE_compartment = 50;
	public static readonly RULE_conservation = 51;
	public static readonly RULE_table_def = 52;
	public static readonly RULE_depends = 53;
	public static readonly RULE_from_st = 54;
	public static readonly RULE_to_st = 55;
	public static readonly RULE_with_st = 56;
	public static readonly RULE_float_or_var = 57;
	public static readonly RULE_number_or_var = 58;
	public static readonly RULE_v = 59;
	public static readonly RULE_safe_var = 60;
	public static readonly RULE_if_statement = 61;
	public static readonly RULE_while_statement = 62;
	public static readonly RULE_from_statement = 63;
	public static readonly RULE_from_counter = 64;
	public static readonly RULE_initial = 65;
	public static readonly RULE_derivative = 66;
	public static readonly RULE_breakpoint = 67;
	public static readonly RULE_solvable_block = 68;
	public static readonly RULE_solvable_block_stmt = 69;
	public static readonly RULE_solve = 70;
	public static readonly RULE_method = 71;
	public static readonly RULE_solvable = 72;
	public static readonly RULE_threadsafe = 73;
	public static readonly RULE_suffix = 74;
	public static readonly RULE_global = 75;
	public static readonly RULE_range = 76;
	public static readonly RULE_pointer = 77;
	public static readonly RULE_point_process = 78;
	public static readonly RULE_bbcorepointer = 79;
	public static readonly RULE_random = 80;
	public static readonly RULE_artificial_cell = 81;
	public static readonly RULE_external = 82;
	public static readonly RULE_nonspecific = 83;
	public static readonly RULE_use_ion = 84;
	public static readonly RULE_read = 85;
	public static readonly RULE_write = 86;
	public static readonly RULE_valence = 87;
	public static readonly RULE_primed = 88;
	public static readonly RULE_units_ctrl = 89;
	public static readonly RULE_title = 90;
	public static readonly RULE_include = 91;
	public static readonly RULE_independent = 92;
	public static readonly RULE_variable = 93;
	public static readonly RULE_constant = 94;
	public static readonly RULE_const_def = 95;
	public static readonly literalNames: (string | null)[] = [ null, "'<='", 
                                                            "'>='", "'=='", 
                                                            "'&&'", "'||'", 
                                                            "'LOCAL'", "'FUNCTION'", 
                                                            "'PROCEDURE'", 
                                                            "'FUNCTION_TABLE'", 
                                                            "'NEURON'", 
                                                            "'UNITS'", "'PARAMETER'", 
                                                            "'ASSIGNED'", 
                                                            "'STATE'", "'_'", 
                                                            "'KINETIC'", 
                                                            "'~'", "'<->'", 
                                                            "'<<'", "'COMPARTMENT'", 
                                                            "'CONSERVE'", 
                                                            "'TABLE '", 
                                                            "'DEPEND '", 
                                                            "'FROM '", "'TO '", 
                                                            "'WITH '", "'while'", 
                                                            "'INITIAL'", 
                                                            "'DERIVATIVE'", 
                                                            "'BREAKPOINT'", 
                                                            "'SOLVE'", "'METHOD'", 
                                                            "'STEADYSTATE'", 
                                                            "'derivimplicit'", 
                                                            "'sparse'", 
                                                            "'cnexp'", "'euler'", 
                                                            "'THREADSAFE'", 
                                                            "'SUFFIX'", 
                                                            "'GLOBAL'", 
                                                            "'RANGE'", "'POINTER'", 
                                                            "'POINT_PROCESS'", 
                                                            "'BBCOREPOINTER'", 
                                                            "'RANDOM'", 
                                                            "'ARTIFICIAL_CELL'", 
                                                            "'EXTERNAL'", 
                                                            "'NONSPECIFIC_CURRENT'", 
                                                            "'USEION'", 
                                                            "'READ'", "'WRITE'", 
                                                            "'VALENCE'", 
                                                            "'UNITSON'", 
                                                            "'UNITSOFF'", 
                                                            "'INCLUDE'", 
                                                            "'INDEPENDENT'", 
                                                            "'START '", 
                                                            "'CONSTANT'", 
                                                            "'*'", "'/'", 
                                                            "'+'", "'-'", 
                                                            "'^'", "'('", 
                                                            "')'", "'{'", 
                                                            "'}'", "'['", 
                                                            "']'", "','", 
                                                            "'''", "'='", 
                                                            "'!='", "'.'", 
                                                            "'<'", "'>'", 
                                                            "':'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "TIMES", 
                                                             "DIVIDE", "PLUS", 
                                                             "MINUS", "POWER", 
                                                             "LPAREN", "RPAREN", 
                                                             "LBRACE", "RBRACE", 
                                                             "LBRACKET", 
                                                             "RBRACKET", 
                                                             "COMMA", "APOSTROPHE", 
                                                             "EQUALS", "NOT_EQUALS", 
                                                             "DOT", "LESS", 
                                                             "GREATER", 
                                                             "COLON", "ID", 
                                                             "SIGN", "NUMBER", 
                                                             "INT", "FLOAT", 
                                                             "STRING", "TITLE", 
                                                             "IF", "ELSE", 
                                                             "ELSEIF", "WHILE", 
                                                             "BUILTIN_FUNC", 
                                                             "USER_FUNC", 
                                                             "WS", "LINE_COMMENT", 
                                                             "COMMENT_BLOCK", 
                                                             "VERBATIM_BLOCK", 
                                                             "PRINTF", "NEWLINE" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file_", "nmodl_block", "statement", "nrn_stat", "block", "expression", 
		"builtin", "assignment", "logical_con", "relational", "addition", "multiplication", 
		"exponentiation", "negation", "primary", "plus_or_minus", "mul_or_div", 
		"exp", "rel_op", "log_con", "paren", "var", "var_ref", "num", "signed_num", 
		"local", "local_vars", "func", "callable", "func_call", "func_par", "func_def", 
		"function_table", "table_par", "neuron_block", "units_block", "parameter_block", 
		"assigned_block", "state_block", "unit_def", "unit_name", "unit_id", "base_unit", 
		"par_def", "assigned_def", "state_var", "kinetic", "kinetic_stat", "reaction", 
		"flux", "compartment", "conservation", "table_def", "depends", "from_st", 
		"to_st", "with_st", "float_or_var", "number_or_var", "v", "safe_var", 
		"if_statement", "while_statement", "from_statement", "from_counter", "initial", 
		"derivative", "breakpoint", "solvable_block", "solvable_block_stmt", "solve", 
		"method", "solvable", "threadsafe", "suffix", "global", "range", "pointer", 
		"point_process", "bbcorepointer", "random", "artificial_cell", "external", 
		"nonspecific", "use_ion", "read", "write", "valence", "primed", "units_ctrl", 
		"title", "include", "independent", "variable", "constant", "const_def",
	];
	public get grammarFileName(): string { return "nmodl.g4"; }
	public get literalNames(): (string | null)[] { return nmodlParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return nmodlParser.symbolicNames; }
	public get ruleNames(): string[] { return nmodlParser.ruleNames; }
	public get serializedATN(): number[] { return nmodlParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, nmodlParser._ATN, nmodlParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public file_(): File_Context {
		let localctx: File_Context = new File_Context(this, this._ctx, this.state);
		this.enterRule(localctx, 0, nmodlParser.RULE_file_);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 195;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 4181819328) !== 0) || ((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & 2315266863) !== 0) || ((((_la - 85)) & ~0x1F) === 0 && ((1 << (_la - 85)) & 49) !== 0)) {
				{
				{
				this.state = 192;
				this.nmodl_block();
				}
				}
				this.state = 197;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 198;
			this.match(nmodlParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nmodl_block(): Nmodl_blockContext {
		let localctx: Nmodl_blockContext = new Nmodl_blockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, nmodlParser.RULE_nmodl_block);
		try {
			this.state = 218;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 1, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 200;
				this.title();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 201;
				this.units_ctrl();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 202;
				this.units_block();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 203;
				this.neuron_block();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 204;
				this.parameter_block();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 205;
				this.constant();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 206;
				this.assigned_block();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 207;
				this.state_block();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 208;
				this.initial();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 209;
				this.derivative();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 210;
				this.kinetic();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 211;
				this.breakpoint();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 212;
				this.function_table();
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 213;
				this.func_def();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 214;
				this.local_vars();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 16);
				{
				this.state = 215;
				this.independent();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 17);
				{
				this.state = 216;
				this.include();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 18);
				{
				this.state = 217;
				this.statement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, nmodlParser.RULE_statement);
		try {
			this.state = 232;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 220;
				this.block();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 221;
				this.units_ctrl();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 222;
				this.expression();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 223;
				this.assignment();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 224;
				this.if_statement();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 225;
				this.while_statement();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 226;
				this.solve();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 227;
				this.from_statement();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 228;
				this.table_def();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 229;
				this.func_def();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 230;
				this.primed();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 231;
				this.local_vars();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
